--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -2,7 +2,7 @@
 
 <form action="/article/<%=@article.id%>" method="POST">
   <input type="hidden" name="_method" value="PUT">
-  <label for="article[title]">Title</label>
+  <label for="@article.title">Title</label>
   <input type="text" name="<%= @article.title %>">
   <label for="article[content]">Content</label>
   <input type="text" name="<%= @article.content %>">
