--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,6 +1,6 @@
 <h1>Edit An Article</h1>
 
-<form action="/article/<%=@article.id%>" method="POST">
+<form action="/articles/<%=@article.id%>" method="POST">
   <input type="hidden" name="_method" value="PATCH">
   <label for="article[title]">Title</label>
   <input type="text" name="<%= @article.title %>" placeholder="title">
