Automatically backed up by Learn

--- a/app/views/delete.erb
+++ b/app/views/delete.erb
@@ -2,5 +2,5 @@
 
 <form action="/articles/<%= @article.id %>" method="POST">
   <input type="hidden" name="_method" value="DELETE">
-  
+  <input type="submit" value="Delete Article">
 </form>
