--- a/app/views/delete.erb
+++ b/app/views/delete.erb
@@ -1,6 +1,11 @@
 <h1>Delete An Article</h1>
 
-<form action="/articles/<%= @article.id %>" method="POST">
+<!-- <form action="/articles/<%= @article.id %>" method="POST">
   <input type="hidden" name="_method" value="DELETE">
   <input type="submit" name="Delete Article" id="Submit">
+</form> -->
+
+<form action="/article/<%=@article_object.id%>" method="post">
+  <input type="hidden" name="_method" value="DELETE">
+  <input type="submit" value="Delete Article?">
 </form>
