Automatically backed up by Learn

--- a/app/views/delete.erb
+++ b/app/views/delete.erb
@@ -6,6 +6,6 @@
 </form> -->
 
 <form action="/articles/<%=@article.id%>" method="post">
-  <input type="hidden" name="_method" value="DELETE">
+  <input type="hidden" name="_method" value="delete">
   <input type="submit" value="Delete Article?">
 </form>
