Automatically backed up by Learn

--- a/app/views/delete.erb
+++ b/app/views/delete.erb
@@ -5,7 +5,7 @@
   <input type="submit" name="Delete Article" id="Submit">
 </form> -->
 
-<form action="/articles/<%=@article.id%>" method="post">
-  <input type="hidden" name="_method" value="delete">
+<form action="/articles/<%=@article.id%>" method="POST">
+  <input type="hidden" name="_method" value="DELETE">
   <input type="submit" value="Delete Article?">
 </form>
