--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -5,6 +5,6 @@
   <label for="article[title]">Title</label>
   <input type="text" name="<%= @article.id.title %>" placeholder="title">
   <label for="article[content]">Content</label>
-  <input type="text" name="<%= @article.content %>" placeholder="content">
+  <input type="text" name="<%= @article.id.content %>" placeholder="content">
   <input type="submit"  value="Edit Article">
 </form>
