Automatically backed up by Learn

--- a/app/views/delete.erb
+++ b/app/views/delete.erb
@@ -1,6 +1,6 @@
-<h1>Delete An Article</h1>
+<!-- <h1>Delete An Article</h1>
 
 <form action="/articles/<%=@article.id%>" method="POST">
   <input type="hidden" name="_method" value="DELETE">
   <input type="submit" value="Delete Article?">
-</form>
+</form> -->
