--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -3,8 +3,8 @@
 <form action="/articles/<%=@article.id%>" method="POST">
   <input type="hidden" name="_method" value="PATCH">
   <label for="article[title]">Title</label>
-  <input type="text" name="<%= @article.title %>" placeholder="title">
+  <input type="text" name="<%= @article.title %>" placeholder="article.title">
   <label for="article[content]">Content</label>
-  <input type="text" name="<%= @article.content %>" placeholder="content">
+  <input type="text" name="<%= @article.content %>" placeholder="article.content">
   <input type="submit"  value="Edit Article">
 </form>
