--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -2,9 +2,9 @@
 
 <form action="/articles/<%=@article.id%>" method="POST">
   <input type="hidden" name="_method" value="PATCH">
-  <label for="article[title]">Title</label>
+  <label for="title">Title</label>
   <input type="text" name="<%= @article.title %>" placeholder="article.title">
-  <label for="article[content]">Content</label>
+  <label for="content">Content</label>
   <input type="text" name="<%= @article.content %>" placeholder="article.content">
   <input type="submit"  value="Edit Article">
 </form>
