--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -5,6 +5,6 @@
   <label for="title">Title</label>
   <input type="text" name="<%= @article.title %>" value="<%= @article.title%>" id="title">
   <label for="content">Content</label>
-  <input type="text" name="<%= @article.content %>" value="<%= @article.content%>" id="title">
+  <input type="text" name="<%= @article.content %>" value="<%= @article.content%>" id="content">
   <input type="submit"  value="Edit Article">
 </form>
